# annual-report-beta-prediction

./: CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
configs/: default.yaml
scripts/: README.md  eval.py  portfolio.py  train.py
src/ar_beta/data/: README.md  dataset.py
src/ar_beta/models/: hierarchical_bert.py  transformer_regressor.py  xgb_tfidf.py
src/ar_beta/portfolio/: simulate.py
src/ar_beta/utils/: io.py  metrics.py  seed.py
