[project]
name = "ar-beta"
version = "0.1.0"
description = "Predicting CAPM beta from 10-K Item 1A risk factor text, plus portfolio simulation."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.30",
  "xgboost>=2.0",
  "yfinance>=0.2",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "matplotlib>=3.8",
]

[tool.ruff]
line-length = 100
